feat: Limpieza de archivos de configuración de Eclipse y mejoras en la documentación
- Se eliminaron archivos de configuración de Eclipse (.classpath, .project, y .settings) que interferían con la detección automática de Maven en VS Code.
- Se actualizaron los archivos README.md y SETUP.md para reflejar los requisitos de software y las instrucciones de instalación de manera más clara y detallada.
- Se mejoró la gestión de módulos JavaFX en los scripts de ejecución para evitar la inclusión de archivos -sources.jar, asegurando una ejecución más fluida de la aplicación.